// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications matches snapshot for appMessage 1`] = `
<div
  className="notification-body"
  style={
    Object {
      "--neutral-base-color": "#fff",
      "--neutral-darker-color": "#fafafa",
      "--neutral-darkest-color": "#e5e5e5",
      "--page-padding-mobile": "1.6rem",
      "--z-index-content-notifications": 20,
    }
  }
>
  <div>
    <div
      className="notification-group"
      style={
        Object {
          "--page-padding-mobile": "1.6rem",
        }
      }
    >
      <div
        className="notification-header"
        style={
          Object {
            "--neutral-darker-color": "#fafafa",
            "--text-color": "#424242",
          }
        }
      >
        Notification
      </div>
      <p
        className="notification-p"
        dangerouslySetInnerHTML={
          Object {
            "__html": "asdf",
          }
        }
        style={
          Object {
            "--text-color": "#424242",
          }
        }
      />
    </div>
    <div
      className="button-group"
    >
      <button
        className="button button-primary button-medium"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "--button-default-active": "#e5e5e5",
            "--button-default-border": "#d5d5d5",
            "--button-default-color": "#fff",
            "--button-default-foreground": "#5e6062",
            "--button-default-hover": "#fafafa",
            "--button-disabled-color": "#f1f1f1",
            "--button-disabled-foreground": "#c1c1c1",
            "--button-focus-outline": "#fff",
            "--button-focus-shadow": "#000",
            "--button-primary-active": "#b03808",
            "--button-primary-color": "#d4450c",
            "--button-primary-foreground": "#fff",
            "--button-primary-hover": "#be3c08",
            "--button-secondary-active": "#818181",
            "--button-secondary-color": "#949494",
            "--button-secondary-foreground": "#fff",
            "--button-secondary-hover": "#8b8b8b",
            "--button-transparent-color": "#027EB5",
          }
        }
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for retiredBookRedirect 1`] = `
<div
  className="notification-body"
  style={
    Object {
      "--neutral-base-color": "#fff",
      "--neutral-darker-color": "#fafafa",
      "--neutral-darkest-color": "#e5e5e5",
      "--page-padding-mobile": "1.6rem",
      "--z-index-content-notifications": 20,
    }
  }
>
  <div>
    <div
      className="notification-group"
      style={
        Object {
          "--page-padding-mobile": "1.6rem",
        }
      }
    >
      <div
        className="notification-header"
        style={
          Object {
            "--neutral-darker-color": "#fafafa",
            "--text-color": "#424242",
          }
        }
      >
        New Edition
      </div>
      <p
        className="notification-p"
        dangerouslySetInnerHTML={
          Object {
            "__html": "You tried to access an old edition of this resource. You have been redirected to the newest edition.",
          }
        }
        style={
          Object {
            "--text-color": "#424242",
          }
        }
      />
      <div
        className="button-group"
      >
        <button
          className="button button-primary button-medium"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "--button-default-active": "#e5e5e5",
              "--button-default-border": "#d5d5d5",
              "--button-default-color": "#fff",
              "--button-default-foreground": "#5e6062",
              "--button-default-hover": "#fafafa",
              "--button-disabled-color": "#f1f1f1",
              "--button-disabled-foreground": "#c1c1c1",
              "--button-focus-outline": "#fff",
              "--button-focus-shadow": "#000",
              "--button-primary-active": "#b03808",
              "--button-primary-color": "#d4450c",
              "--button-primary-foreground": "#fff",
              "--button-primary-hover": "#be3c08",
              "--button-secondary-active": "#818181",
              "--button-secondary-color": "#949494",
              "--button-secondary-foreground": "#fff",
              "--button-secondary-hover": "#8b8b8b",
              "--button-transparent-color": "#027EB5",
            }
          }
        >
          Got it!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for unknown notification 1`] = `null`;

exports[`Notifications matches snapshot for updateAvailable 1`] = `
<div
  className="notification-body"
  style={
    Object {
      "--neutral-base-color": "#fff",
      "--neutral-darker-color": "#fafafa",
      "--neutral-darkest-color": "#e5e5e5",
      "--page-padding-mobile": "1.6rem",
      "--z-index-content-notifications": 20,
    }
  }
>
  <div>
    <div
      className="notification-group"
      style={
        Object {
          "--page-padding-mobile": "1.6rem",
        }
      }
    >
      <div
        className="notification-header"
        style={
          Object {
            "--neutral-darker-color": "#fafafa",
            "--text-color": "#424242",
          }
        }
      >
        Updates Available
      </div>
      <p
        className="notification-p"
        style={
          Object {
            "--text-color": "#424242",
          }
        }
      >
        Click below to use the most recent version of this software.
      </p>
    </div>
    <div
      className="button-group"
    >
      <button
        className="button button-primary button-medium"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "--button-default-active": "#e5e5e5",
            "--button-default-border": "#d5d5d5",
            "--button-default-color": "#fff",
            "--button-default-foreground": "#5e6062",
            "--button-default-hover": "#fafafa",
            "--button-disabled-color": "#f1f1f1",
            "--button-disabled-foreground": "#c1c1c1",
            "--button-focus-outline": "#fff",
            "--button-focus-shadow": "#000",
            "--button-primary-active": "#b03808",
            "--button-primary-color": "#d4450c",
            "--button-primary-foreground": "#fff",
            "--button-primary-hover": "#be3c08",
            "--button-secondary-active": "#818181",
            "--button-secondary-color": "#949494",
            "--button-secondary-foreground": "#fff",
            "--button-secondary-hover": "#8b8b8b",
            "--button-transparent-color": "#027EB5",
          }
        }
      >
        Update
      </button>
    </div>
  </div>
</div>
`;
